telegraf/influxdb/service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
spec:
  template:
    spec:
      containers:
      - name: influxdb
        image: influxdb
        ports:
        - containerPort: 8086
          protocol: TCP
