telegraf/influxdb/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: influxdb
spec:
  rules:
  - host: influxdb.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: influxdb
          servicePort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: telegraf
spec:
  type: ClusterIP
  ports:
  - port: 8086
    targetPort: 8086
  selector:
    app: telegraf
